--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
   "dependencies": {
     "discord.js": "^13.3.1",
     "mysql": "^2.18.1",
-    "nodemon": "^2.0.14"
+    "nodemon": "^2.0.14",
+    "puppeteer": "^11.0.0"
   },
   "devDependencies": {
     "env-cmd": "^10.1.0"
